인증db연결,Authentication 정보확인,

--- a/rlandboot3/src/main/resources/templates/admin/menu/list.html
+++ b/rlandboot3/src/main/resources/templates/admin/menu/list.html
@@ -2,7 +2,8 @@
 <html 
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="inc/layout">
+	layout:decorate="inc/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <main layout:fragment="main" class="main-padding-none">
 <script src="/js/admin/menu/list.js" defer="defer"></script>		
 		<section id="main-section">
